--- a/build.gradle
+++ b/build.gradle
@@ -4,4 +4,5 @@ plugins {
     id 'com.android.library' version '8.2.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.9.21' apply false
     id 'com.google.devtools.ksp' version '1.9.21-1.0.16' apply false
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.1'
 }
