--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.devtools.ksp'
-    id("com.google.android.libraries.mapsplatform.secrets-gradle-plugin")
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
@@ -50,11 +50,9 @@ android {
             dimension 'mode'
             applicationIdSuffix '.dev'
             versionNameSuffix '_dev'
-            buildConfigField("String","API_KEY",properties["apiKey"] as String?:"")
         }
         prod {
             dimension 'mode'
-            buildConfigField("String","API_KEY",properties["apiKey"] as String?:"")
         }
     }
 
@@ -102,7 +100,6 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.9.21')
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
