--- a/app/build.gradle
+++ b/app/build.gradle
@@ -146,4 +146,6 @@ dependencies {
     // In Android Studio, add the following dependency to your build.gradle.kts file:
     implementation("com.google.ai.client.generativeai:generativeai:0.1.1")
     implementation ("com.google.accompanist:accompanist-permissions:0.28.0")
+    implementation 'org.deepspeech:libdeepspeech:0.9.3'
+
 }
